Cd2pojo/copycreator (#22)
* CDDecorator: CopyCreator as a decorator & ordering fixes

* Cleanup cddecgen